# YtSubsTracker

./: README.md  meson.build  org.gnome.Yt_Subs_Tracker.json
data/: meson.build  org.gnome.Yt_Subs_Tracker.appdata.xml.in  org.gnome.Yt_Subs_Tracker.desktop.in  org.gnome.Yt_Subs_Tracker.gschema.xml
po/: POTFILES  meson.build
src/: blank.c  blank.h  channels.conf  conf.c  conf.h  main-backend.c  main-backend.h  main.c  meson.build  parse.c  parse.h  readConf.c  readConf.h  writeConf.c  writeConf.h  yt_subs_tracker-window.c  yt_subs_tracker-window.h  yt_subs_tracker-window.ui  yt_subs_tracker-window.ui~  yt_subs_tracker.gresource.xml
